# ash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Catch
include/ash/: ash_math.h  buffer.h  c_utils.h  compare_base.h  data_region.h  double_buffer.h  dup_tuple.h  fixed_decimal.h  fixed_string.h  free_list.h  function_ptr.h  keep_val.h  memory_pool.h  multipart.h  optimistic_buffer.h  sstorage.h  tmp_buffer.h
include/ash/c_utils/: c_pow.h
include/ax/: ax_math.h  c_utils.h  compare_base.h  data_region.h  decimal.h  fixed_decimal.h  fixed_string.h  free_list.h  memory_pool.h
include/ax/c_utils/: c_min_max.h  c_pow.h
test/: CMakeLists.txt  a.out  data_region.cpp  double_buffer.cpp  dup_tuple.cpp  fixed_decimal.cpp  fixed_string.cpp  function_ptr.cpp  keep_val.cpp  main.cpp  memory_pool.cpp  multipart.cpp  optimistic_buffer.cpp  sstorage.cpp  tmp_buffer.cpp
